Add preversion script

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start:webpack": "webpack -w",
     "build": "bsb -clean-world -make-world && webpack --optimize-minimize",
     "clean": "bsb -clean-world && rm -rf build examples/build",
+    "preversion": "yarn run clean",
     "predeploy": "yarn run clean && mkdir build && yarn run build && cp -R examples/{index.html,index.css,build} build/",
     "deploy": "now deploy build",
     "test": "exit 0"
