--- a/package.json
+++ b/package.json
@@ -11,14 +11,12 @@
     "build": "bsb -clean-world -make-world && webpack --optimize-minimize",
     "clean": "bsb -clean-world && rm -rf build examples/build",
     "preversion": "yarn run clean",
-    "predeploy": "yarn run clean && mkdir build && yarn run build && cp -R examples/{index.html,index.css,build} build/",
-    "deploy": "now deploy build",
+    "predeploy":
+      "yarn run clean && mkdir build && yarn run build && cp -R examples/{index.html,index.css,build} build/",
+    "deploy": "now deploy build --public",
     "test": "exit 0"
   },
-  "files": [
-    "src",
-    "bsconfig.json"
-  ],
+  "files": ["src", "bsconfig.json"],
   "keywords": [
     "react",
     "reason",
