--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "author": "Alex Fedoseev <alex.fedoseev@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start:bs": "bsb -clean-world -make-world -w",
-    "start:webpack": "webpack -w",
+    "bs:watch": "bsb -clean-world -make-world -w",
+    "wp:watch": "webpack -w",
     "build": "bsb -clean-world -make-world && webpack --optimize-minimize",
     "clean": "bsb -clean-world && rm -rf build examples/build",
     "preversion": "yarn run clean",
