--- a/.atom/ide-reason.json
+++ b/.atom/ide-reason.json
@@ -1,5 +1,6 @@
 {
   "path": {
-    "bsb": "./node_modules/.bin/bsb"
+    "bsb": "./node_modules/.bin/bsb",
+    "bsc": "./node_modules/.bin/bsc"
   }
 }
