--- a/package.json
+++ b/package.json
@@ -32,11 +32,11 @@
     "url": "https://github.com/alexfedoseev/re-formality.git"
   },
   "peerDependencies": {
-    "bs-platform": "^2.2.2",
+    "bs-platform": "^2.2.2 || ^3.0.0",
     "reason-react": "^0.3.0"
   },
   "devDependencies": {
-    "bs-platform": "2.2.3",
+    "bs-platform": "^3.0.0",
     "re-classnames": "1.0.0",
     "reason-react": "0.3.4",
     "webpack": "3.11.0"
