--- a/package.json
+++ b/package.json
@@ -33,12 +33,12 @@
   },
   "peerDependencies": {
     "bs-platform": "^2.2.2 || ^3.0.0",
-    "reason-react": "^0.3.0"
+    "reason-react": "^0.3.0 || ^0.4.1"
   },
   "devDependencies": {
     "bs-platform": "^3.0.0",
     "re-classnames": "1.1.0",
-    "reason-react": "0.3.4",
+    "reason-react": "0.4.1",
     "webpack": "3.11.0"
   }
 }
