--- a/package.json
+++ b/package.json
@@ -36,10 +36,10 @@
     "reason-react": "^0.3.0 || ^0.4.1"
   },
   "devDependencies": {
-    "bs-platform": "^3.0.0",
+    "bs-platform": "3.1.5",
     "re-classnames": "2.0.0",
-    "reason-react": "0.4.1",
-    "webpack": "4.8.3",
-    "webpack-cli": "2.1.3"
+    "reason-react": "0.4.2",
+    "webpack": "4.10.2",
+    "webpack-cli": "2.1.4"
   }
 }
