--- a/package.json
+++ b/package.json
@@ -6,14 +6,17 @@
   "author": "Alex Fedoseev <alex.fedoseev@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "bsb -clean-world -make-world && NODE_ENV=development webpack --mode development --watch",
-    "build": "bsb -clean-world -make-world && NODE_ENV=production webpack --mode production",
-    "clean": "bsb -clean-world && rm -rf build examples/build",
+    "start": "parcel examples/index.html",
+    "build": "parcel build examples/index.html",
+    "prebuild": "yarn run clean && yarn run build:bs",
+    "build:bs": "bsb -make-world",
+    "clean": "yarn run clean:bs && yarn run clean:dist",
+    "clean:bs": "bsb -clean-world",
+    "clean:dist": "rm -rf dist",
     "test": "exit 0",
     "refmt": "find -E . -regex '.+\\.rei?' -exec refmt --in-place {} \\;",
-    "deploy": "now deploy build --public",
-    "preversion": "yarn run clean && yarn run refmt",
-    "predeploy": "yarn run clean && mkdir build && yarn run build && cp -R examples/{index.html,index.css,build} build/"
+    "deploy": "now deploy dist --public --name re-formality",
+    "predeploy": "yarn run build"
   },
   "files": [
     "src",
@@ -25,7 +28,9 @@
     "reason-react",
     "reasonml",
     "ocaml",
-    "bucklescript"
+    "bucklescript",
+    "forms",
+    "validation"
   ],
   "repository": {
     "type": "git",
@@ -37,9 +42,9 @@
   },
   "devDependencies": {
     "bs-platform": "3.1.5",
+    "bsb-js": "1.1.3",
+    "parcel-bundler": "1.8.1",
     "re-classnames": "2.0.0",
-    "reason-react": "0.4.2",
-    "webpack": "4.10.2",
-    "webpack-cli": "2.1.4"
+    "reason-react": "0.4.2"
   }
 }
