--- a/package.json
+++ b/package.json
@@ -37,14 +37,14 @@
     "url": "https://github.com/alexfedoseev/re-formality.git"
   },
   "peerDependencies": {
-    "bs-platform": "^2.2.2 || ^3.0.0",
-    "reason-react": "^0.3.0 || ^0.4.1"
+    "bs-platform": "^4.0.3",
+    "reason-react": "^0.5.0"
   },
   "devDependencies": {
-    "bs-platform": "3.1.5",
-    "bsb-js": "1.1.3",
-    "parcel-bundler": "1.8.1",
-    "re-classnames": "2.0.0",
-    "reason-react": "0.4.2"
+    "bs-platform": "4.0.5",
+    "bsb-js": "1.1.7",
+    "parcel-bundler": "1.9.7",
+    "re-classnames": "2.1.0",
+    "reason-react": "0.5.3"
   }
 }
