--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "clean:bs": "bsb -clean-world",
     "clean:dist": "rm -rf dist",
     "test": "exit 0",
-    "refmt": "find -E . -regex '.+\\.rei?' -exec refmt --in-place {} \\;",
+    "format": "bsrefmt --in-place **/*.{re,rei}",
     "deploy": "now deploy dist --public --name re-formality",
     "predeploy": "yarn run build"
   },
