Fast-pipe, validators, Belt

--- a/bsconfig.json
+++ b/bsconfig.json
@@ -14,7 +14,7 @@
     "react-jsx": 2,
   },
   "refmt": 3,
-  "bsc-flags": ["-bs-super-errors"],
+  "bsc-flags": ["-open Belt"],
   "package-specs": {
     "module": "commonjs",
     "in-source": true,
