--- a/bsconfig.json
+++ b/bsconfig.json
@@ -5,8 +5,8 @@
     {
       "dir": "examples",
       "type" : "dev",
-      "subdirs": true,
-    },
+      "subdirs": true
+    }
   ],
   "bs-dependencies": [
     "reason-react",
@@ -14,13 +14,16 @@
   ],
   "bs-dev-dependencies": ["re-classnames"],
   "reason": {
-    "react-jsx": 2,
+    "react-jsx": 2
   },
   "refmt": 3,
   "bsc-flags": ["-open Belt"],
   "package-specs": {
     "module": "commonjs",
-    "in-source": true,
+    "in-source": true
   },
   "suffix": ".bs.js",
+  "warnings": {
+    "number": "-45"
+  }
 }
