--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
   },
   "peerDependencies": {
     "bs-platform": "^5.0.2",
-    "reason-react": "^0.7.0"
+    "reason-react": "^0.6.0 || ^0.7.0"
   },
   "devDependencies": {
     "bs-platform": "5.0.2",
