--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "re-formality",
-  "version": "3.0.0-beta.2",
+  "version": "3.0.0",
   "description": "Reasonable form validation tool for reason-react",
   "main": "src/Formality.re",
   "author": "Alex Fedoseev <alex.fedoseev@gmail.com>",
