--- a/bsconfig.json
+++ b/bsconfig.json
@@ -19,7 +19,7 @@
   "refmt": 3,
   "bsc-flags": ["-open Belt"],
   "package-specs": {
-    "module": "commonjs",
+    "module": "es6",
     "in-source": true
   },
   "suffix": ".bs.js",
