--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 node_modules/
-*/lib/
+*/**/lib/
 */dist/
 .merlin
 .bsb.lock
@@ -10,3 +10,4 @@ yarn-error.log
 _esy
 _build
 re-formality-ppx.install
+lib/test/**/*.cmt
