--- a/lib/package.json
+++ b/lib/package.json
@@ -10,9 +10,10 @@
     "bs:build": "bsb -clean-world -make-world",
     "bs:watch": "bsb -clean-world -make-world -w",
     "bs:clean": "bsb -clean-world",
-    "esy:build": "esy build",
-    "format": "bsrefmt --in-place **/*.{re,rei}",
-    "test": "exit 0"
+    "test": "esy x test.exe",
+    "test:output:read": "test/script/output-read",
+    "test:output:write": "test/script/output-write",
+    "format": "bsrefmt --in-place **/*.{re,rei}"
   },
   "keywords": [
     "react",
