--- a/lib/ppx/dune
+++ b/lib/ppx/dune
@@ -3,5 +3,6 @@
   (public_name re-formality-ppx.lib)
   (kind ppx_rewriter)
   (libraries ppxlib)
+  (flags (:standard -w -30))
   (preprocess (pps ppxlib.metaquot ppxlib.runner))
 )
