--- a/lib/package.json
+++ b/lib/package.json
@@ -5,6 +5,10 @@
   "main": "src/Formality.re",
   "author": "Alex Fedoseev <alex.fedoseev@gmail.com>",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/MinimaHQ/re-formality.git"
+  },
   "scripts": {
     "start": "yarn run bs:watch",
     "bs:build": "bsb -clean-world -make-world",
@@ -17,6 +21,19 @@
     "test:clean": "test/script/clean",
     "format": "bsrefmt --in-place **/*.{re,rei}"
   },
+  "files": [
+    "src",
+    "bin",
+    "bsconfig.json",
+    "postinstall.js"
+  ],
+  "dependencies": {
+    "re-debouncer": "2.1.0"
+  },
+  "devDependencies": {
+    "bs-platform": "7.2.2",
+    "reason-react": "0.7.0"
+  },
   "keywords": [
     "react",
     "reason",
@@ -26,17 +43,5 @@
     "bucklescript",
     "forms",
     "validation"
-  ],
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/alexfedoseev/re-formality.git"
-  },
-  "dependencies": {
-    "bs-log": "1.1.0",
-    "re-debouncer": "2.1.0"
-  },
-  "devDependencies": {
-    "bs-platform": "7.2.2",
-    "reason-react": "0.7.0"
-  }
+  ]
 }
