--- a/examples/package.json
+++ b/examples/package.json
@@ -20,6 +20,8 @@
   "dependencies": {
     "re-classnames": "4.1.0",
     "re-formality": "*",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
     "reason-react": "0.8.0"
   },
   "devDependencies": {
