--- a/specs/package.json
+++ b/specs/package.json
@@ -18,6 +18,8 @@
     "cypress": "4.5.0",
     "parcel-bundler": "1.12.4",
     "re-formality": "*",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
     "reason-react": "0.8.0",
     "start-server-and-test": "1.11.0"
   }
