Switch to @rescript/react

--- a/examples/bsconfig.json
+++ b/examples/bsconfig.json
@@ -2,7 +2,7 @@
   "name": "re-formality-examples",
   "sources": ["src"],
   "bs-dependencies": [
-    "reason-react",
+    "@rescript/react",
     "re-formality",
     "re-classnames"
   ],
