--- a/lib/sandbox/bsconfig.json
+++ b/lib/sandbox/bsconfig.json
@@ -2,7 +2,7 @@
   "name": "re-formality-sandbox",
   "sources": ["src"],
   "bs-dependencies": [
-    "reason-react",
+    "@rescript/react",
     "re-formality"
   ],
   "reason": {
