Can we have something shared on gha?

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -5,6 +5,16 @@ on:
     branches:
       - master
 
+shared:
+  .: &checkout
+    name: Checkout repo
+    uses: actions/checkout@v2
+  .: &setup-node
+    name: Setup Node ${{ matrix.node-version }}
+    uses: actions/setup-node@v1
+    with:
+      node-version: ${{ matrix.node-version }}
+
 jobs:
   build:
     name: Build on ${{ matrix.os }}
@@ -15,13 +25,8 @@ jobs:
         os: [ubuntu-latest, macOS-latest, windows-latest]
 
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v2
-
-      - name: Setup Node ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
-        with:
-          node-version: ${{ matrix.node-version }}
+      - *checkout
+      - *setup-node
 
       - name: Print Yarn cache
         id: print-yarn-cache
