Fix linux build

--- a/lib/ppx/dune
+++ b/lib/ppx/dune
@@ -1,8 +1,8 @@
 (library
-  (name Ppx)
+  (name ppx)
   (public_name re-formality-ppx.lib)
   (kind ppx_rewriter)
-  (libraries ppxlib)
+  (libraries reason ppxlib)
   (flags (:standard -w -30))
-  (preprocess (pps ppxlib.metaquot ppxlib.runner))
+  (preprocess (pps ppxlib.metaquot))
 )
