--- a/specs/package.json
+++ b/specs/package.json
@@ -15,7 +15,8 @@
   "dependencies": {
     "@rescript/react": "0.10.3",
     "cypress": "4.5.0",
-    "parcel-bundler": "1.12.4",
+    "parcel": "2.3.2",
+    "process": "0.11.10",
     "re-formality": "*",
     "react": "16.13.1",
     "react-dom": "16.13.1",
