--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,16 +61,13 @@ jobs:
         run: |
           cd lib
           yarn run build
+          cd ../ppx/sandbox
+          yarn run build
 
-      # - name: Install public interface of ReScript lib
-      #   run: |
-      #     cd lib
-      #     yarn run install
-
-      # - name: Run ppx tests
-      #   # FIXME: Snapshot tests are broken on Win
-      #   if: matrix.os != 'windows-latest'
-      #   run: esy x test.exe
+      - name: Run ppx tests
+        # FIXME: Snapshot tests are broken on Win
+        if: matrix.os != 'windows-latest'
+        run: esy x test.exe
 
       - name: Run integration tests
         run: |
@@ -109,7 +106,7 @@ jobs:
         uses: actions/cache@v1
         with:
           path: ${{ steps.print-yarn-cache.outputs.yarn-cache }}
-          key: ${{ matrix.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          key: ${{ matrix.os }}-yarn-${{ hashFiles('**/yarn.lock') }}-v1
 
       - name: Install Yarn deps
         run: yarn install
@@ -135,23 +132,17 @@ jobs:
         run: |
           cd lib
           yarn run build
+          cd ../ppx/sandbox
+          yarn run build
 
-      # - name: Install public interface of ReScript lib
-      #   run: |
-      #     cd lib
-      #     yarn run install
-
-      # - name: Run ppx tests
-      #   run: esy x test.exe
+      - name: Run ppx tests
+        run: esy x test.exe
 
       # FIXME: Integration tests are broken on Linux
       # - name: Run integration tests
       #   run: |
       #     cd specs
       #     yarn run test
-
-      # - name: Build ppx
-      #   run: esy build
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v1
