--- a/ppx/bin/dune
+++ b/ppx/bin/dune
@@ -1,5 +1,4 @@
 (executable
-  (name bin)
-  (public_name re-formality-ppx)
-  (libraries re-formality-ppx.lib)
-)
+ (name bin)
+ (public_name re-formality-ppx)
+ (libraries re-formality-ppx.lib))
