--- a/ppx/lib/dune
+++ b/ppx/lib/dune
@@ -2,7 +2,7 @@
   (name lib)
   (public_name re-formality-ppx.lib)
   (kind ppx_rewriter)
-  (libraries reason ppxlib)
+  (libraries ppxlib)
   (flags (:standard -w -30-9))
   (preprocess (pps ppxlib.metaquot))
 )
