--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "re-formality",
     "version": "4.0.0-beta.20",
     "description": "Form validation tool for @rescript/react",
-    "author": "Alex Fedoseev <alex@fedoseev.mx>",
+    "author": "Alex Fedoseev <alex@35mil.me>",
     "license": "MIT",
     "repository": {
         "type": "git",
